<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Vine mars</string>

    <string name="start">Get started</string>
    <string name="dialog_title_update">Update</string>
    <string name="dialog_msg_update">Mobo Pick just got better! A new version available.</string>
    <string name="dialog_button_update_positive">Update</string>
    <string name="dialog_button_update_negative">Maybe later</string>
    <string name="instruction_1">Bought a new smart phone, you feel so happy!!!</string>
    <string name="instruction_2">But dozens of apps for same purposes, which one is better?</string>
    <string name="instruction_3">IT editors, apps fans senior users... pick the best for you.</string>
    <string name="instruction_4">Share your favorites discover fans favorites</string>
    <string name="hello_world">Hello world!</string>
    <!-- menu-->
    <string name="action_settings">Settings</string>
    <string name="action_signup">@string/signup</string>
    <string name="action_close">@string/close</string>
    <string name="action_send">@string/send</string>
    <!-- menu end-->

    <string name="signup">Sign Up</string>

    <string name="tab_text_message">Message</string>
    <string name="tab_text_calendar">Calendar</string>
    <string name="tab_text_friend">Friend</string>
    <string name="tab_text_discover">Discover</string>
    <string name="tab_text_me">Me</string>
    <string name="signin">Sign In</string>
    <string name="send">Send</string>


    <!-- net exception-->
    <string name="error_parse">Data parse errored. </string>
    <string name="old_password">Old password </string>
    <string name="new_password">New password </string>

    <!-- end net exception-->
    <string name="password">Password</string>
    <string name="phone_or_email">Phone number/ Email</string>
    <string name="hint_password">@string/password</string>
    <string name="hint_username">Username</string>
    <string name="hint_captcha">Captcha</string>
    <string name="hint_old_passworkd">Your old password</string>
    <string name="hint_new_passworkd">Your new password</string>

    <string name="username">Username</string>
    <string name="user_info">User information</string>
    <string name="profile">Profile</string>
    <string name="other">Other</string>
    <string name="other_block">Other block</string>
    <string name="sigin_vine">Sigin Vinestar</string>
    <string name="sigin_des">More functions after you sigin</string>
    <string name="change_password">Change password</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="create_a_account">Create a Vine account.</string>

    <!-- form validation -->
    <string name="prompt_email_invalid">Invalid email address.</string>
    <string name="prompt_username_invalid">Username only can be phone number or email.</string>
    <string name="prompt_phone_number_invalid">Invalid phone number.</string>
    <string name="verify_username_alread_exists">This name already exists.</string>
    <string name="verify_not_empty"><xliff:g>%1$s</xliff:g> can not be empty.</string>
    <string name="verify_begin_with_letter">The first character cannot be a number.</string>
    <string name="verify_no_whitespace"><xliff:g>%1$s</xliff:g> can not contain any whitespace.</string>
    <string name="verify_length">The length of the <xliff:g>%1$s</xliff:g> only can between <xliff:g>%2$s</xliff:g> and <xliff:g>%3$s.</xliff:g></string>
    <string name="verify_not_consistent"><xliff:g>%1$s</xliff:g> are not the same.</string>
    <string name="verify_label_username">Username</string>
    <string name="verify_label_password">Password</string>
    <string name="verify_label_nickname">Nickname</string>
    <!-- form validation -->
    <string name="ok">OK</string>

    <!-- dialog -->
    <string name="dialog_title_error">Error</string>
    <!-- dialog end -->

    <string name="about">About</string>
    <string name="schedule">Schedule</string>
    <string name="production">Production</string>
    <string name="relationship">Relationship</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="basic_info">Basic Information</string>
    <string name="links">Links</string>
    <string name="education">Education</string>
    <string name="work">Work</string>
    <string name="places">Places</string>
    <string name="show_password">Show Password</string>
    <string name="hint_region_code">Region Code</string>
    <string name="region">Region</string>
    <string name="get_checkcode">Get Check Code<xliff:g>%1$s</xliff:g></string>
    <string name="title_phone_confirmation">Phone Number Confirmation</string>
    <string name="message_phone_confirmation">We will send a verification code to the following number:\n\n<xliff:g>%1$s</xliff:g></string>
    <string name="verification_code">Verification Code</string>
    <string name="code">Code</string>
    <string name="re_get_check_code">No verification code received?</string>
    <string name="next">Next</string>
    <string name="verification_code_des">Your SMS verification code has been sent to your phone</string>

    <!-- server error -->
    <string name="invalid_username_password">Invalid account or password. Please enter again</string>
    <!-- server error end -->

    <!-- Feedback  page-->
    <string name="feedback_label">Feedback and Suggestions</string>
    <string name="feedback_hint">Please help us improve it !</string>
    <string name="feedback_contact_label">Your contacts</string>
    <string name="feedback_contact_hint">please leave your contacts(such as email,mobile or other contacts.)</string>
    <string name="feedback_button_label">Submit</string>
    <!-- Feedback  page end-->

    <!-- Topic page -->
    <string name="post">Post</string>
    <string name="publish_topic">Publish Topic</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="share_to">To: </string>



    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>

</resources>

