<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@id/toolbar"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:theme="@style/Theme.Toolbar"
        >

        <TextView
            android:id="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verification_code"
            android:textAppearance="@style/TextAppearance.Large.White"/>
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@id/layout_signin"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_inner_padding_horizontal_small"
        android:layout_marginRight="@dimen/layout_inner_padding_horizontal_small"
        android:layout_marginTop="@dimen/layout_padding_vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@id/text_verification_code_des"
                android:textAppearance="@style/TextAppearance.Small"
                android:text="@string/verification_code_des"/>
            <TextView
                android:layout_width="match_parent"
                android:id="@id/phone_number"
                android:textStyle="bold"
                android:layout_below="@id/text_verification_code_des"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:text="+86 18610219171"
                android:gravity="center"
                android:layout_marginTop="@dimen/layout_inner_padding_vertical"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:id="@id/layout_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:layout_below="@id/phone_number"
                android:background="@drawable/apptheme_textfield_activated_holo_light"
                android:layout_marginTop="@dimen/layout_inner_padding_vertical_small"
                >

                <TextView
                    android:id="@id/et_user_name"
                    style="@style/EditTextAppTheme"
                    android:layout_width="@dimen/edit_region_min_width"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_captcha"
                    android:text="@string/code"
                    android:editable="false"
                    android:background="@android:color/transparent"
                    android:textAppearance="@style/TextAppearance.Small"
                    android:textColor="@android:color/black"/>

                <AutoCompleteTextView
                    android:id="@id/edit_code"
                    style="@style/EditTextAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_height"
                    android:layout_marginLeft="@dimen/layout_inner_padding_horizontal_small"
                    android:layout_toRightOf="@id/et_user_name"
                    android:hint="@string/hint_username"
                    android:background="@android:color/transparent"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/edit_padding"
                    android:paddingRight="@dimen/edit_padding"
                    android:textAppearance="@style/TextAppearance.Small"/>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_username"
                android:id="@id/text_get_checkcode"
                android:layout_marginTop="@dimen/layout_inner_padding_vertical"
                android:textColor="@color/primary"
                android:text="@string/re_get_check_code"
                android:gravity="center"/>


            <Button
                android:id="@+id/btn_next"
                style="@style/ButtonAppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_get_checkcode"
                android:layout_marginTop="@dimen/layout_inner_padding_vertical"
                android:text="@string/next"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>