<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@id/layout_signin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/layout_inner_padding_horizontal_small"
    android:theme="@style/AppTheme"
    android:layout_marginRight="@dimen/layout_inner_padding_horizontal_small"
    android:layout_marginTop="@dimen/layout_padding_vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large">


        <RelativeLayout
            android:id="@id/layout_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_marginTop="@dimen/layout_inner_padding_vertical_small"
            >

            <AutoCompleteTextView
                android:id="@+id/et_user_name"
                style="@style/EditTextAppTheme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/edit_padding"
                android:paddingRight="@dimen/edit_padding"
                android:textAppearance="@style/TextAppearance.Small"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_below="@id/layout_username"
            android:layout_marginTop="@dimen/layout_inner_padding_vertical_small"
            android:gravity="bottom"
            >

            <AutoCompleteTextView
                android:id="@id/et_password"
                style="@style/EditTextAppTheme"
                android:layout_width="@dimen/edit_passoword_min_width"
                android:layout_height="match_parent"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/edit_padding"
                android:paddingRight="@dimen/edit_padding"
                android:textAppearance="@style/TextAppearance.Small"/>

            <CheckBox
                android:id="@id/show_password"
                style="@style/CheckBoxAppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/et_password"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/et_password"
                android:text="@string/show_password"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btn_ok"
            style="@style/ButtonAppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_password"
            android:layout_marginTop="@dimen/layout_inner_padding_vertical"
            android:text="@string/signin"/>


    </RelativeLayout>

</LinearLayout>