<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@id/toolbar"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:theme="@style/ActionBarThemeOverlay"
        >

        <TextView
            android:id="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signin"
            android:textAppearance="@style/TextAppearance.Large.White"/>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/include_loading"/>

        <LinearLayout
            android:id="@id/cross_fader_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/include_sign_block"/>

            <LinearLayout
                android:id="@id/action_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_inner_padding_vertical_small"
                android:layout_marginTop="@dimen/layout_inner_padding_vertical_small"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textAppearance="@style/TextAppearance.Small"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_a_account"
                    android:textColor="@color/primary"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>