<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:fillViewport="false"
            >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@id/label_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Large"
            android:text="@string/user_info"/>
        <TextView
            style="@style/Widget.Line"
            android:layout_below="@id/label_user_info"
            android:padding="2dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="0.8"
            android:shadowRadius="0.2"
            android:id="@id/line_label_user_info"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_label_user_info"
            android:orientation="vertical"
            android:id="@id/layout_info"
            android:gravity="center_vertical"
            android:minHeight="@dimen/item_height">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Medium"
                android:text="@string/sigin_vine"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Small"
                android:text="@string/sigin_des"/>
            </LinearLayout>

        <TextView
            style="@style/Widget.Line"
            android:id="@+id/line_layout_info"
            android:layout_below="@id/layout_info"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/item_height"
            android:id="@+id/info_other"

            android:layout_below="@id/line_layout_info"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.Medium"
            android:text="@string/other"/>
        <TextView
            style="@style/Widget.Line"
            android:layout_below="@id/info_other"
            android:id="@+id/line_layout_info2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/item_height"
            android:id="@+id/info_other2"
            android:layout_below="@id/line_layout_info"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.Medium"
            android:text="@string/other"/>
        <TextView
            style="@style/Widget.Line"
            android:layout_below="@id/info_other2"
            android:id="@+id/line_layout_info3"/>


        <TextView
            android:id="@+id/label_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line_layout_info3"
            android:textAppearance="@style/TextAppearance.Large"
            android:text="@string/other_block"/>
        <TextView
            style="@style/Widget.Line"
            android:layout_below="@id/label_other"
            android:padding="2dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="1"
            android:shadowDy="0.8"
            android:shadowRadius="0.2"
            android:id="@+id/line_label_other"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/item_height"
            android:id="@+id/other_other"
            android:layout_below="@id/line_label_other"
            android:gravity="center_vertical"
            android:textAppearance="@style/TextAppearance.Medium"
            android:text="@string/other"/>
        <TextView
            style="@style/Widget.Line"
            android:layout_below="@id/other_other"
            android:id="@+id/line_other_block"/>
    </RelativeLayout>


</ScrollView>