<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large">

        <RelativeLayout
            android:id="@id/container_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/shape_editbox"
            >

            <ImageView
                android:id="@id/btn_clear_name"
                android:layout_width="25.0dip"
                android:layout_height="25.0dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="2.0dip"
                android:src="@drawable/ic_action_clear"
                android:visibility="invisible"/>

            <AutoCompleteTextView
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/btn_clear_name"
                android:background="@null"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="2.0dip"
                android:textAppearance="@style/TextAppearance.Small"
                android:textCursorDrawable="@null"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@id/container_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_below="@id/container_name"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/shape_editbox"
            >

            <ImageView
                android:id="@id/btn_clear_password"
                android:layout_width="25.0dip"
                android:layout_height="25.0dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="2.0dip"
                android:src="@drawable/ic_action_clear"
                android:visibility="invisible"/>

            <AutoCompleteTextView
                android:id="@id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/btn_clear_password"
                android:background="@null"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="2.0dip"
                android:textAppearance="@style/TextAppearance.Small"
                android:textCursorDrawable="@null"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@id/layout_captcha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:layout_below="@id/container_password">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_captcha"
                android:layout_weight="2"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_height"
                android:layout_weight="3"/>
        </LinearLayout>

        <Button
            android:id="@id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_captcha"
            android:layout_marginTop="20.0dip"
            android:text="@string/signin"/>
    </RelativeLayout>
</ScrollView>