<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large">

        <RelativeLayout
            android:id="@id/container_old_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/shape_editbox"
            >

            <ImageView
                android:id="@id/btn_clear_old_password"
                android:layout_width="25.0dip"
                android:layout_height="25.0dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="2.0dip"
                android:src="@drawable/ic_action_clear"
                android:visibility="invisible"/>

            <EditText
                android:id="@id/edit_old_password"
                android:textAppearance="@style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/btn_clear_old_password"
                android:background="@null"
                android:hint="@string/hint_old_passworkd"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="2.0dip"
                android:textCursorDrawable="@null"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@id/container_new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_height"
            android:layout_below="@id/container_old_password"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/shape_editbox"
            >

            <ImageView
                android:id="@id/btn_clear_new_password"
                android:layout_width="25.0dip"
                android:layout_height="25.0dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="2.0dip"
                android:src="@drawable/ic_action_clear"
                android:visibility="invisible"/>

            <EditText
                android:id="@id/edit_new_password"
                android:textAppearance="@style/TextAppearance.Small"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/btn_clear_new_password"
                android:background="@null"
                android:hint="@string/hint_new_passworkd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="2.0dip"
                android:textCursorDrawable="@null"/>
        </RelativeLayout>

        <Button
            android:id="@id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_new_password"
            android:layout_marginTop="20.0dip"
            android:text="@string/ok"/>
    </RelativeLayout>
</ScrollView>