<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fillViewport="true"
              android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:theme="@style/ActionBarThemeOverlay"
        />

    <android.support.v7.widget.CardView
        android:id="@id/layout_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_large">


            <RelativeLayout
                android:id="@id/container_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:layout_marginTop="10.0dip"
                >

                <ImageView
                    android:id="@id/btn_clear_name"
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="2.0dip"
                    android:src="@drawable/ic_action_clear"
                    android:visibility="gone"/>

                <AutoCompleteTextView
                    android:id="@+id/et_user_name"
                    style="@style/EditTextAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/btn_clear_name"
                    android:hint="@string/hint_username"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="2.0dip"
                    android:textAppearance="@style/TextAppearance.Small"
                    android:textCursorDrawable="@null"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@id/container_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:layout_below="@id/container_name"
                android:layout_marginTop="10.0dip"
                >

                <ImageView
                    android:id="@id/btn_clear_password"
                    android:layout_width="25.0dip"
                    android:layout_height="25.0dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="2.0dip"
                    android:src="@drawable/ic_action_clear"
                    android:visibility="gone"/>

                <AutoCompleteTextView
                    android:id="@id/et_password"
                    style="@style/EditTextAppTheme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@id/btn_clear_password"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="2.0dip"
                    android:textAppearance="@style/TextAppearance.Small"
                    android:textCursorDrawable="@null"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_signin"
                style="@style/ButtonAppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/container_password"
                android:layout_marginTop="20.0dip"
                android:text="@string/signin"/>


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@id/action_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_signin"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"
            android:textAppearance="@style/TextAppearance.Small"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/create_a_acccount"
            android:textAppearance="@style/TextAppearance.Large"
            android:textColor="@color/primary"/>
    </LinearLayout>
</LinearLayout>